--- a/.envrc
+++ b/.envrc
@@ -13,5 +13,6 @@ if [[ -n "$TF_PREFIX" ]]; then
     export CGO_CFLAGS="-I${TF_PREFIX}/include"
     export CGO_LDFLAGS="-L${TF_PREFIX}/lib -ltensorflow"
     export LIBRARY_PATH="${TF_PREFIX}/lib"
+    export GOFLAGS="-tags=tensorflow"
     # Note: Don't set DYLD_LIBRARY_PATH as it conflicts with Python TensorFlow
 fi
